--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,12 @@
 version: '3.9'
 services:
-  soma_app_db:
-    container_name: agendamento-db
+  db:
+    container_name: somar_app_db_dev
     image: postgres:16.2-alpine3.19
     environment:
       POSTGRES_USER: "admin"
       POSTGRES_PASSWORD: "admin"
-      POSTGRES_DB: "somar"
+      POSTGRES_DB: "somar_dev"
       PG_DATA: "/data/postgres"
     volumes:
       - "./infra/postgres:/data/postgres"
