--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>projeto-integrado-iv-api</finalName>
 	</build>
 
 </project>
